# spyder

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  NOTICE  README.md  STABILITY.md  TEST-REPORT.json  agents-guide.md  bullseye.yaml  cli.go  cli_visual.go  doctor.go  doctor_test.go  go.mod  go.sum  hermeticity_test.go  main.go  main_test.go  status.go  status_test.go
.github/workflows/: pr.yml  release.yml
android/: .gitignore
android/BouncingBall/: build.gradle.kts  settings.gradle.kts
bridge/: README.md  pmd3-bridge.spec  pyproject.toml
bridge/src/pmd3_bridge/: __init__.py  __main__.py  _fake_services.py  app.py  assertions.py  schemas.py  services.py
bridge/tests/: test_bridge.py  test_dtx_context_manager.py  test_hil_rsd_lockdown.py  test_resilience.py  test_service_provider.py  test_syslog_timestamps.py
cmd/gedharness/: main.go
cmd/spyder-killusbmuxd/: main.go
docs/: TODO.md  audit-log.md  gedharness-recording.md  plateau-p.md  stream-observability.md  streaming-data-plane-plan.md
docs/papers/: t29-device-state-detection.md  t36-tunneld-launchd-investigation.md  t38-cli-rough-edges.md
internal/appchannel/: describe.go  describe_test.go  factory.go  factory_test.go  jq.go  jq_test.go  logs_e2e_test.go  protocol.go  protocol_test.go  session.go  session_test.go  slice_descriptor_test.go  spawn.go  spawn_test.go  state_capture.go  state_capture_json.go  state_capture_test.go  tweak_e2e_test.go
internal/autoawake/: autoawake.go  autoawake_test.go
internal/baselines/: baselines.go  baselines_test.go
internal/cliexit/: cliexit.go  cliexit_test.go
internal/clitimeout/: clitimeout.go  clitimeout_test.go
internal/daemon/: daemon.go  daemon_test.go  diagnostics.go  health.go
internal/dashboard/: dashboard.go  dashboard_smoke_test.go  index.html
internal/device/: android.go  android_adb_live_test.go  android_lifecycle_live_test.go  android_test.go  crashes_test.go  desktop.go  desktop_test.go  device.go  ios.go  ios_devicectl_test.go  ios_goios_live_test.go  ios_health_test.go  ios_lifecycle_live_test.go  ios_multi_live_test.go  ios_pool_live_test.go  ios_test.go  ios_wedge_live_test.go  keepawake.go  keepawake_test.go  logs_test.go  sim.go
internal/devicectl/: devicectl.go  devicectl_test.go  lifecycle.go  query.go
internal/gedharness/: client.go  client_realged_test.go  client_test.go  corpus.go  corpus_test.go  differ.go  differ_test.go  mcp.go  normalize.go  normalize_test.go  study.go
internal/goios/: listener.go  listener_test.go  pool.go  pool_isolation_test.go  reestablish.go  reestablish_test.go  retry_test.go  session.go  version_test.go  watcher.go  watcher_test.go
internal/health/: bridge.go  bridge_test.go  classify.go  classify_test.go  model.go  model_test.go  notify.go  notify_exec.go  notify_test.go  poll.go  self_restart.go  self_restart_test.go  supervise.go  supervise_test.go  umbrella_test.go  watchdog.go
internal/inventory/: inventory.go  inventory_test.go
internal/iostunnel/: supervisor.go  supervisor_test.go
internal/logcapture/: session.go  session_live_test.go  session_test.go
internal/logcollect/: listener.go  listener_test.go
internal/mcp/: app_channel.go  app_channel_lan.go  app_channel_test.go  app_exec.go  app_exec_test.go  app_state_capture_test.go  desktop_live_test.go  dispatch_deadline.go  dispatch_deadline_test.go  handlers_test.go  health_report.go  health_report_test.go  health_surface_test.go  is_running_test.go  launch_player.go  launch_player_live_test.go  launch_player_orient_test.go  launch_player_test.go  launch_then_logs_test.go  log_capture.go  log_collect.go  logs_test.go  output_path_test.go  parse_time_arg_test.go  recording_test.go  reservations_test.go  reserve_selector_test.go  resolve_test.go  rotate_test.go  runs_test.go  script_helpers.go  script_t108_test.go  self_restart_evidence.go  server.go  server_factory_live_test.go  slow_dispatch_test.go  tools.go  tools_visual.go
internal/network/: profiles.go  profiles_test.go
internal/notify/: notify.go  notify_test.go
internal/oslog/: decoder_test.go  parser.go  parser_test.go  record.go  stream.go
internal/paths/: paths.go  paths_test.go
internal/playerweb/: playerweb.go
internal/pmd3bridge/: client.go  client_test.go  device_test.go  doc.go  errors.go  fdcount_test.go  integration_test.go  lifecycle_integration_test.go  parse_test.go  restart_test.go  schemas.go  screenshot_ios17plus_test.go  staysawake_test.go  stream.go  stream_test.go  supervisor.go  supervisor_test.go  timeouts.go
internal/pool/: config.go  executor.go  pool.go  pool_test.go
internal/poolstore/: poolstore.go  poolstore_test.go
internal/recording/: recording.go  recording_test.go
internal/reservations/: reservations.go  reservations_test.go
internal/rest/: rest.go  rest_test.go  stream.go  stream_test.go
internal/runs/: runs.go  runs_test.go
internal/scriptlib/: assert.go  assert_test.go  lib.go  lib_test.go  resolve.go  resolve_test.go
internal/selector/: parse_string.go  parse_string_test.go  selector.go  selector_test.go
internal/simemu/: simemu.go  simemu_test.go
internal/streamrelay/: orient_test.go  path.go  path_test.go  relay.go  relay_test.go  replace_test.go  stream_live_test.go
internal/tunneld/: tunneld.go  tunneld_test.go
internal/visualdiff/: visualdiff.go  visualdiff_test.go
internal/wedge/: doctor_bridge.go  episode.go  episode_test.go  monitor.go  monitor_test.go  parity.go  parity_test.go  recover.go  recover_test.go  snapshot.go  (+2 more)
ios/: README.md
player/: Makefile  NOTICES.md  README.md  main.cpp  player_capture_apple.h  player_capture_apple.mm  player_core.cpp  player_core.h
player/android/app/src/main/cpp/: CMakeLists.txt  main.cpp  player_sprite_stub.cpp  player_stubs.cpp
player/ios/: CMakeLists.txt  ExportOptions.plist  Info-Land.plist  Info-Port.plist  Info.plist  KeychainStore.h  KeychainStore.mm  build-deps.sh  check-player-variants.sh  main.mm
player/ios/Assets-PlayerLand.xcassets/AppIcon.appiconset/: Contents.json
scripts/: check-test-report-fresh.sh  run-dev-bridge.sh  test-report.sh
(+96 files in other folders)
