[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmd3-bridge"
version = "0.1.0"
description = "HTTP bridge over Unix domain socket for pymobiledevice3 operations"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pymobiledevice3>=4.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pmd3_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
